# explorer

./: .gitignore  CMakeLists.txt  Expander.qml  FileEntry.qml  FileInfoDialog.qml  OverwriteDialog.qml  README.md  abstract_file_entry_model.cc  abstract_file_entry_model.h  main.cc  main.qml  place_dir_pairs_abstract_model.cc  place_dir_pairs_abstract_model.h  resources.qrc  test.qml  test_rename.cc  ui_data.cc
android/: AndroidManifest.xml  build.gradle
android/java/: Utils.java
